--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-optimized-images",
+  "name": "@redknife/next-optimized-images",
   "version": "2.5.0",
   "description": "Automatically optimize images used in next.js projects (jpeg, png, gif, svg).",
   "main": "lib/index.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cyrilwanner/next-optimized-images.git"
+    "url": "git+https://github.com/Redknife/next-optimized-images.git"
   },
   "keywords": [
     "nextjs",
@@ -25,12 +25,11 @@
     "optimize",
     "optimized-images"
   ],
-  "author": "Cyril Wanner <info@cyr.li>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cyrilwanner/next-optimized-images/issues"
+    "url": "https://github.com/Redknife/next-optimized-images/issues"
   },
-  "homepage": "https://github.com/cyrilwanner/next-optimized-images#readme",
+  "homepage": "https://github.com/Redknife/next-optimized-images#readme",
   "dependencies": {
     "chalk": "^2.4.2",
     "figures": "^3.0.0",
